@@ -570,12 +570,17 @@ globus_l_dsi_rest_prepare_write_gridftp_op_callback(
         .op = gridftp_op_arg->op,
         .pending_buffers_last = &current_part->gridftp_op_arg.pending_buffers,
         .offset = gridftp_op_arg->offset,
+        .eofp = &gridftp_op_arg->eof
     };
     if (gridftp_op_arg->length != (globus_off_t) -1)
     {
         current_part->gridftp_op_arg.end_offset =
                 current_part->gridftp_op_arg.offset 
                 + gridftp_op_arg->length;
+    }
+    else
+    {
+        current_part->gridftp_op_arg.end_offset = (globus_off_t) -1;
     }
     rc = globus_mutex_init(&current_part->gridftp_op_arg.mutex, NULL);
     if (rc != GLOBUS_SUCCESS)
